--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "clean": "npx rimraf dist",
     "build": "yarn clean && npx tsc",
     "start": "node ./dist/index.js",
-    "test": "echo Not implemented"
+    "test": "echo Not implemented",
+    "format": "npx prettier --write src/**/*.**"
   },
   "devDependencies": {
     "@types/node": "^18.7.18",
+    "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
