--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "clean": "npx rimraf dist",
     "build": "yarn clean && npx tsc",
     "start": "node ./dist/index.js",
+    "start:dev": "npx nodemon",
     "test": "echo Not implemented",
     "format": "npx prettier --write src/**/*.**"
   },
   "devDependencies": {
     "@types/node": "^18.7.18",
+    "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
