--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
     "build": "yarn clean && npx tsc",
     "start": "node ./dist/index.js",
     "start:dev": "npx nodemon",
-    "test": "echo Not implemented",
+    "test": "jest",
     "format": "npx prettier --write src/**/*.**"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/jest": "^29.0.3",
     "@types/node": "^18.7.18",
+    "jest": "^29.0.3",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
+    "ts-jest": "^29.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   },
