--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
     "express": "^4.18.1"
   }
